# Pyscription

./: Idea.md  Makefile  README.md  loadpipe.README.md
pyscription/: Cargo.toml  docs.md
pyscription/src/: cli.rs  error.rs  gemini.rs  generator.rs  lib.rs  main.rs  parcer.rs  parser.pest  parser.rs  report.rs  sercrets.yaml
pyscription/tests/: gemini_online.rs  parser_tests.rs
pyscription/tests/examples/loadpipe/: .gitignore  README.md  __init__.py  pyproject.toml
pyscription/tests/examples/loadpipe/configs/: README.md  config.yaml
pyscription/tests/examples/loadpipe/docs/: architecture.md  architecture.mmd
pyscription/tests/examples/loadpipe/src/loadpipe/: __init__.py  cli.py  config.py  errors.py  filesystem.py  log.py
pyscription/tests/examples/loadpipe/src/loadpipe/adapters/: gdrive.py
pyscription/tests/examples/loadpipe/src/loadpipe/auth/: oauth.py
pyscription/tests/examples/loadpipe/src/loadpipe/io/: download.py  fs.py  upload.py
pyscription/tests/examples/loadpipe/src/loadpipe/processing/: __init__.py
pyscription/tests/examples/loadpipe/src/loadpipe/state/: __init__.py  manifest.py  schema.sql
