[package]
name = "pyscription"
version = "0.1.0"
edition = "2024"
description = "Token-efficient README generator that parses Python APIs and docstrings"
readme = "README.md"
license = "MIT"
keywords = ["python", "readme", "parser", "AI"]

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.17"
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
pest = "2.7.10"
pest_derive = "2.7.10"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
